config/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express #linking this service to the app mentioned here
  type: LoadBalancer  # this is used for specifying it is an external service
  ports:
    - protocol: TCP
      port: 8081 #port specified for the service this can be diff from port and targetPort below
      targetPort: 8081 #port exposed by the containerPort
      nodePort: 30000 #port opened at the node or server for external access
